--- a/index.html
+++ b/index.html
@@ -4,153 +4,161 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minimo</title>
+    <link rel="shortcut icon" href="../minimo-layout/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="../workspace/css/style.css">
+    <link rel="stylesheet" href="../minimo-layout/css/style.css">
 </head>
 <body>
     <header class="header">
-            <div class="container">
-                <div class="wrapper">
-                    <img src="../workspace/img/logo.jpg" alt="logo" class="logo">
-                    <nav class="nav">
-                        <ul class="header-list">
-                            <li>
-                                <a href="#" class="header-link">Lifestyle</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header-link">Photodiary</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header-link">Music</a>
-                            </li>
-                            <li>
-                                <a href="#" class="header-link">Travel</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    </div>
-                    <img src="../workspace/img/girls.jpg" alt="girls" class="girls">
-                </div>
+        <div class="container">
+            <div class="wrapper">
+                <img src="../minimo-layout/img/logo.jpg" alt="logo" class="logo">
+                <nav class="nav">
+                    <ul class="header-list">
+                        <li>
+                            <a href="#" class="header-link">Lifestyle</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header-link">Photodiary</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header-link">Music</a>
+                        </li>
+                        <li>
+                            <a href="#" class="header-link">Travel</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <img src="../minimo-layout/img/girls.jpg" alt="image" class="image">
+        </div>
     </header>
     <section>
         <div class="container-2">
-            <p class="title">
+            <p class="card-subtitle">
                 Photodiary
             </p>
-            <h1 id="mainStageArtist" class="h1">
+            <h1 class="card-title">
                 The perfect weekend getaway
             </h1>
-            <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, illo? Odit dolore molestiae vitae. Pariatur quod doloremque, vel sequi voluptate corporis reprehenderit libero iusto sunt nulla doloribus, corrupti illum temporibus beatae ab veniam omnis soluta inventore ullam rerum ea ad. Sapiente, asperiores vero. Molestiae minima facilis ipsam dolorem ipsum nulla consequatur velit pariatur. Veritatis assumenda asperiores perspiciatis laborum accusamus voluptatum libero rerum odit recusandae, voluptatem ullam et ipsum quod error? Asperiores ipsum et corrupti? Adipisci odio unde praesentium quo esse.
+            <p class="main-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, illo? Odit dolore molestiae vitae. Pariatur quod doloremque, 
+                vel sequi voluptate corporis reprehenderit libero iusto sunt nulla doloribus, corrupti illum temporibus beatae ab veniam omnis soluta inventore 
+                ullam rerum ea ad. Sapiente, asperiores vero. Molestiae minima facilis ipsam dolorem ipsum nulla consequatur velit pariatur. Veritatis assumenda 
+                asperiores perspiciatis laborum accusamus voluptatum libero rerum odit recusandae, voluptatem ullam et ipsum quod error? 
+                Asperiores ipsum et corrupti? Adipisci odio unde praesentium quo esse.
             </p>
-            <p class="title">
+            <p class="first-title">
                 Leave a comment
             </p>
             <div class="wrapper">
                 <div class="card">
-                    <img src="../workspace/img/img1.jpg" alt="img1">
-                    <p class="card-title">
+                    <img src="../minimo-layout/img/img1.jpg" alt="img1">
+                    <p class="card-subtitle">
                         Lifestyle
                     </p>
-                    <h2 class="h2">
+                    <h2 class="card-title">
                         More than just a music festival
                     </h2>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio 
+                        veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
                     </p>
                 </div>
                 <div class="card">
-                    <img src="../workspace/img/img2.jpg" alt="img2">
-                    <p class="card-title" id="card-title">
+                    <img src="../minimo-layout/img/img2.jpg" alt="img2">
+                    <p class="card-subtitle" id="card-subtitle">
                         Lifestyle
                     </p>
-                    <h2 class="h2">
+                    <h2 class="card-title">
                         Life tastes better with coffee
                     </h2>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio 
+                        veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
                     </p>
                 </div>
                 </div>
                 <div class="wrapper">
                     <div class="card">
-                        <img src="../workspace/img/img3.jpg" alt="img3">
-                        <p class="card-title">
+                        <img src="../minimo-layout/img/img3.jpg" alt="img3">
+                        <p class="card-subtitle">
                             Photodiary
                         </p>
-                        <h2 class="h2">
+                        <h2 class="card-title">
                             American dream
                         </h2>
-                        <p class="text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio 
+                            veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
                         </p>
                     </div>
                     <div class="card">
-                        <img src="../workspace/img/img4.jpg" alt="img4">
-                        <p class="card-title">
+                        <img src="../minimo-layout/img/img4.jpg" alt="img4">
+                        <p class="card-subtitle">
                             Photodiary
                         </p>
-                        <h2 class="h2">
+                        <h2 class="card-title">
                             A day exploring the Alps
                         </h2>
-                        <p class="text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio 
+                            veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
                         </p>
                     </div>
                 </div>
         </div>
     </section>
-    <section class="offer">
+    <section class="subscription">
         <div class="container">
-            <h2 class="h2">
+            <h2 class="card-title">
                 Sign up for our newsletter!
             </h2>
             <form class="form" action="#">
                 <input class="input" type="email" placeholder="Enter a valid email adress">
-                <button class="send"><img src="../workspace/img/send.png" alt="send"></button>
+                <button class="button"><img src="../minimo-layout/img/send.png" alt="button"></button>
             </form>
         </div>
     </section>
-    <div class="end">
-        <div class="container-2">
+        <div class="container-2 last-screen">
             <div class="wrapper">
                 <div class="card">
-                    <img src="../workspace/img/img5.jpg" alt="img5">
-                    <p class="card-title">
+                    <img src="../minimo-layout/img/img5.jpg" alt="img5">
+                    <p class="card-subtitle">
                         Photodiary
                     </p>
-                    <h2 class="h2">
-                        Top 10 song for running
+                    <h2 class="card-title">
+                        Top 10 songs for running
                     </h2>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio 
+                        veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
                     </p>
                 </div>
                 <div class="card">
-                    <img src="../workspace/img/img6.jpg" alt="img6">
-                    <p class="card-title">
+                    <img src="../minimo-layout/img/img6.jpg" alt="img6">
+                    <p class="card-subtitle">
                         Photodiary
                     </p>
-                    <h2 class="h2">
+                    <h2 class="card-title">
                         Cold winter days
                     </h2>
-                    <p class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi unde, voluptates magni ea, est praesentium molestias, vel distinctio 
+                        veniam animi ratione voluptatem deserunt! Ex beatae unde quo cupiditate dolor recusandae?
                     </p>
                 </div>
             </div>
-            <a href="#" class="loadmore">
+            <a href="#" class="load-button">
                 Load more
             </a>
         </div>
-    </div>
     <footer class="footer">
         <div class="container">
             <div class="wrapper">
-                <div class="first">
+                <div class="footer-left-column">
                     <ul class="header-list">
                         <li>
                             <a href="" class="header-link footer-link">Terms and conditions</a>
@@ -160,21 +168,20 @@
                         </li>
                     </ul> 
                 </div>
-                    <div class="second">
+                    <div class="footer-right-column">
                         <ul class="header-list footer-list">
                             <li>
                                 <a href="#" class="header-link footer-link follow">Follow</a>
                             </li>
                         </ul>
-                        <a href="" class="header-link footer-link"><img class="icons" src="../workspace/img/facebook.png" alt="facebook"></a>
-                        <a href="" class="header-link footer-link"><img class="icons" src="../workspace/img/twitter.png" alt="twitter"></a>
-                        <a href="" class="header-link footer-link"><img class="icons" src="../workspace/img/instagram.png" alt="instagram"></a>
+                        <a href="" class="header-link footer-link"><img class="footer-icon" src="../minimo-layout/img/facebook.png" alt="facebook"></a>
+                        <a href="" class="header-link footer-link"><img class="footer-icon" src="../minimo-layout/img/twitter.png" alt="twitter"></a>
+                        <a href="" class="header-link footer-link"><img class="footer-icon" src="../minimo-layout/img/instagram.png" alt="instagram"></a>
                     </div>
                 </div>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="../workspace/js/main.js"></script>
+    <!-- <script src="../minimo-layout/js/main.js"></script> -->
 </body>
 </html>
 
