--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="wrapper">
+            <div class="wrapper navbar">
                 <img src="../minimo-layout/img/logo.jpg" alt="logo" class="logo">
                 <nav class="nav">
                     <ul class="header-list">
@@ -157,7 +157,7 @@
         </div>
     <footer class="footer">
         <div class="container">
-            <div class="wrapper">
+            <div class="wrapper footer-columns">
                 <div class="footer-left-column">
                     <ul class="header-list">
                         <li>
